# kaggle-credit-competition

./: README.md  pyproject.toml  requirements.txt
doc/: note.txt  tabelle.txt
notebooks/: EDA_unified.ipynb  eda.ipynb  first_analysis.ipynb  home-credit-2024-starter-notebook.ipynb  inference_skeleton.ipynb  starter-notebook.ipynb  train_base.ipynb  training_baseline.ipynb  training_skeleton.ipynb
notebooks/table_analysis/: table_credit_bureau.ipynb  table_person.ipynb  table_prev_applications.ipynb  table_static.ipynb  table_train_base_analysis.ipynb  table_train_registry_analysis.ipynb
src/: modeling.py  preproc_static.py  utils.py
src/preproc/: preproc_static.py  utils.py
